syntax = "proto3";

package Protos;

message GlobalMessageRequest
{
    string message = 1;
}

message DirectMessageRequest
{
    string message = 1;
    string targetUser = 2;
}

message ChangeNameRequest
{
    string newName = 1;
}

message Request {
    oneof request
    {
        ChangeNameRequest changeName = 1;
        GlobalMessageRequest globalMessage = 2;
        DirectMessageRequest directMessage = 3;
    }
}